[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PigeonsHouse"]
rust-version = "1.89.0"

[workspace]
resolver = "2"
members = [
    "vsml_ast",
    "vsml_audio_mixer",
    "vsml_cli",
    "vsml_common_audio",
    "vsml_common_image",
    "vsml_core",
    "vsml_encoder",
    "vsml_image_renderer",
    "vsml_iv_converter",
    "vsml_parser",
    "vsml_processor",
]

[workspace.dependencies]
vsml_ast = { path = "vsml_ast" }
vsml_audio_mixer = { path = "vsml_audio_mixer" }
vsml_common_audio = { path = "vsml_common_audio" }
vsml_common_image = { path = "vsml_common_image" }
vsml_core = { path = "vsml_core" }
vsml_encoder = { path = "vsml_encoder" }
vsml_image_renderer = { path = "vsml_image_renderer" }
vsml_iv_converter = { path = "vsml_iv_converter" }
vsml_parser = { path = "vsml_parser" }
vsml_processor = { path = "vsml_processor" }
bytemuck = { version = "1.22.0", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
dasp = { version = "0.11.0", features = ["all"] }
hound = "3.5.1"
image = "0.25.5"
mockall = "0.13.1"
mp4parse = "0.17.0"
nom = "8.0.0"
pollster = "0.4.0"
regex = "1.11.1"
roxmltree = "0.20.0"
temp-dir = "0.1.14"
thiserror = "2.0.12"
wgpu = "24.0.3"
