[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PigeonsHouse"]

[workspace]
resolver = "2"
members = [
    "vsml_ast",
    "vsml_audio_mixer",
    "vsml_cli",
    "vsml_common_audio",
    "vsml_common_image",
    "vsml_core",
    "vsml_encoder",
    "vsml_image_renderer",
    "vsml_iv_converter",
    "vsml_parser",
    "vsml_processor",
    "vsml_test_utils",
    "vsml_text_renderer",
]

[workspace.dependencies]
vsml_ast = { path = "vsml_ast" }
vsml_audio_mixer = { path = "vsml_audio_mixer" }
vsml_common_audio = { path = "vsml_common_audio" }
vsml_common_image = { path = "vsml_common_image" }
vsml_core = { path = "vsml_core" }
vsml_encoder = { path = "vsml_encoder" }
vsml_image_renderer = { path = "vsml_image_renderer" }
vsml_iv_converter = { path = "vsml_iv_converter" }
vsml_parser = { path = "vsml_parser" }
vsml_processor = { path = "vsml_processor" }
vsml_test_utils = { path = "vsml_test_utils" }
vsml_text_renderer = { path = "vsml_text_renderer" }

bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.54", features = ["derive"] }
cosmic-text = "0.16"
dasp = { version = "0.11.0", features = ["all"] }
font-kit = "0.14"
hound = "3.5.1"
image = "0.25.9"
mockall = "0.14.0"
nom = "8.0.0"
phf = { version = "0.13.1", features = ["macros"] }
pollster = "0.4.0"
regex = "1.12.2"
roxmltree = "0.21.1"
temp-dir = "0.1.16"
thiserror = "2.0.18"
ttf-parser = "0.25.1"
wgpu = "28.0.0"
