[package]
name = "vsml_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vsml_common_image.workspace = true
vsml_core.workspace = true
vsml_iv_converter.workspace = true
vsml_parser.workspace = true
vsml_processer.workspace = true
vsml_renderer.workspace = true
