[package]
name = "vsml_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "vsml"
path = "src/main.rs"

[dependencies]
vsml_audio_mixer.workspace = true
vsml_common_audio.workspace = true
vsml_common_image.workspace = true
vsml_core.workspace = true
vsml_encoder.workspace = true
vsml_image_renderer.workspace = true
vsml_iv_converter.workspace = true
vsml_parser.workspace = true
vsml_processer.workspace = true
clap.workspace = true
pollster.workspace = true
wgpu.workspace = true
