[package]
name = "vsml_image_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vsml_core.workspace = true
vsml_common_image.workspace = true
bytemuck.workspace = true
wgpu.workspace = true

[dev-dependencies]
image.workspace = true
pollster.workspace = true
