[package]
name = "vsml_processor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vsml_common_audio.workspace = true
vsml_common_image.workspace = true
vsml_core.workspace = true
ffmpeg-next.workspace = true
hound.workspace = true
image.workspace = true
mp4parse.workspace = true
wgpu.workspace = true
