[package]
name = "vsml_processor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vsml_text_renderer.workspace = true
vsml_common_audio.workspace = true
vsml_common_image.workspace = true
vsml_core.workspace = true

hound.workspace = true
image.workspace = true
wgpu.workspace = true
