[package]
name = "vsml_text_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vsml_core.workspace = true
vsml_common_image.workspace = true
vsml_iv_converter.workspace = true

cosmic-text.workspace = true
font-kit.workspace = true
ttf-parser.workspace = true
wgpu.workspace = true

[dev-dependencies]
vsml_test_utils.workspace = true

pollster.workspace = true
image.workspace = true
